# Vaulted

./: .gitignore  README.md  run_compliance_check.sh  test_aegis_core.py  test_compliance.py  test_ingestion.py  test_vault_core.py
aegis-core/aegis_core/ai/: fl_client.py  trainer.py
aegis-core/aegis_core/compliance/: shredder.py
aegis-core/aegis_core/crypto/: security.py
aegis-core/aegis_core/database/: connection.py  models.py
aegis-core/aegis_core/engine/: aegis_engine.py
aegis-core/aegis_core/ingestion/: handlers.py
aegis-core/tests/: test_crypto.py
aegis-engine/: Cargo.toml
aegis-engine/src/: crypto.rs  fl_core.rs  mobile.rs  network.rs  sdk.rs
aegis-gateway/aegis_gateway/: app.py
aegis-server/: Dockerfile
aegis-server/aegis_server/: server.py  strategy.py
aegis-server/tests/: test_checkpoint_recovery.py
android/: README.md
android/app/: build.gradle
certs/: cert.pem  key.pem
docs/: COMPLIANCE_REPORT.md  ENCRYPTION.md  GDPR_MAPPING.md  README.md  TEE_INTEGRATION.md  THREAT_MODEL.md  architecture.md  security_spec.md
ios/AegisMobile/Source/: AegisApp.swift  ContentView.swift
scripts/: audit_security.py  gen_certs.py  generate_compliance_report.py
test_data_ingestion/: finance_data.csv  finance_data.enc
vaulted-core/tests/: test_crypto.py
vaulted-core/vaulted_core/ai/: fl_client.py
vaulted-core/vaulted_core/compliance/: engine.py  shredder.py
vaulted-core/vaulted_core/crypto/: security.py
vaulted-core/vaulted_core/database/: models.py
vaulted-gateway/vaulted_gateway/: app.py
vaulted-server/vaulted_server/: server.py
(+3 files in other folders)
