[package]
name = "aegis-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crypto
aes-gcm = "0.10.3"
rand = "0.8.5"
thiserror = "1.0"
zeroize = "1.7"
base64 = "0.21"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3.8"
