[package]
name = "aegis-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "aegis_engine"

[dependencies]
# Crypto
aes-gcm = "0.10.3"
rand = "0.8.5"
thiserror = "1.0"
zeroize = "1.7"
base64 = "0.21"
anyhow = "1.0"
rand_distr = "0.4"


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

# FFI
uniffi = { version = "0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[dev-dependencies]
tempfile = "3.8"
